refactor: move config files to .github/confs/
- Move .commitlintrc.json to .github/confs/commitlintrc.json
- Move .releaserc.json to .github/confs/releaserc.json
- Update dev-build.yml to use new config path

--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -108,4 +108,4 @@ jobs:
         id: semantic
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: semantic-release
+        run: semantic-release --extends ./.github/confs/releaserc.json
