feat: Criado parse para XML; melhorias na compilacao; criacao de maquina de estados; modularizacao de modulos que continham apenas .h para ter tambem .c

--- a/conf/ccg.conf
+++ b/conf/ccg.conf
@@ -5,7 +5,8 @@
 # Description: CCG config file
 
 trace=./log/card_game.log
-debug-level=9
+debug-level=999
 wrk-dir=./
 fonts-dir=./fonts
+conf-dir=./conf
 
