--- a/conf/ccg.conf
+++ b/conf/ccg.conf
@@ -5,7 +5,9 @@
 # Description: CCG config file
 
 trace=./log/card_game.log
-debug-level=999
+# 0: Global 1: SDL 2: XML 3: SCREEN
+#           GSXs
+debug-level=9809
 wrk-dir=./
 fonts-dir=./fonts
 conf-dir=./conf
