ci: fix refs to artifact

--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -10,21 +10,21 @@ on:
       - main
       - dev
     paths-ignore:
-      - 'docker/**'
-      - 'Dockerfile'
-      - '*.md'
+      - "docker/**"
+      - "Dockerfile"
+      - "*.md"
   pull_request:
     branches:
       - main
       - dev
     paths-ignore:
-      - 'docker/**'
-      - 'Dockerfile'
-      - '*.md'
+      - "docker/**"
+      - "Dockerfile"
+      - "*.md"
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: lampiaotechteam/ccg
+  IMAGE_NAME: ${{ github.repository_owner }}/ccg
 
 permissions:
   contents: write
@@ -35,7 +35,7 @@ jobs:
     name: Test (Dev Environment)
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/lampiaotechteam/ccg:dev-latest
+      image: ghcr.io/{{ github.repository_owner }}/ccg:dev-latest
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
@@ -62,7 +62,7 @@ jobs:
     needs: test-dev
     if: github.base_ref == 'main' || (github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev'))
     container:
-      image: ghcr.io/lampiaotechteam/ccg:quality-latest
+      image: ghcr.io/{{ github.repository_owner }}/ccg:quality-latest
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
