ci: include package missing release-notes-generator needed by semver

--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -165,6 +165,7 @@ jobs:
           npm install -g @semantic-release/git
           npm install -g @semantic-release/github
           npm install -g conventional-changelog-conventionalcommits
+          npm install -g @semantic-release/release-notes-generator
 
       - name: Download Linux binary
         uses: actions/download-artifact@v4
