ci: npx needed included

--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -189,4 +189,4 @@ jobs:
         id: semantic
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: semantic-release --extends ./.github/confs/releaserc.json
+        run: npx semantic-release --extends ./.github/confs/releaserc.json
